load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "src_lib",
    srcs = ["main.go"],
    importpath = "github.com/kujilabo/bamboo/bamboo-app1/src",
    visibility = ["//visibility:private"],
    deps = [
        "//bamboo-lib",
        "//lib/errors",
        "@com_github_google_uuid//:uuid",
        "@com_github_segmentio_kafka_go//:kafka-go",
    ],
)

go_binary(
    name = "src",
    embed = [":src_lib"],
    visibility = ["//visibility:public"],
)
