load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "src_lib",
    srcs = ["main.go"],
    importpath = "github.com/kujilabo/bamboo/bamboo-app1/src",
    visibility = ["//visibility:private"],
    deps = [
        "//bamboo-app1/src/config",
        "//bamboo-lib/client",
        "//bamboo-worker-redis-redis/src/proto",
        "//bamboo-worker1/src/proto",
        "//lib/config",
        "//lib/log",
        "@com_github_google_uuid//:uuid",
        "@com_github_sirupsen_logrus//:logrus",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//propagation",
        "@io_opentelemetry_go_otel_sdk//trace",
        "@org_golang_google_protobuf//proto",
    ],
)

go_binary(
    name = "src",
    embed = [":src_lib"],
    visibility = ["//visibility:public"],
)
