load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "result",
    srcs = [
        "redis_result_subscriber.go",
        "result_subscriber.go",
    ],
    importpath = "github.com/kujilabo/bamboo/bamboo-lib/result",
    visibility = ["//visibility:public"],
    deps = ["@com_github_redis_go_redis_v9//:go-redis"],
)
