load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "result",
    srcs = [
        "config.go",
        "redis_result_subscriber.go",
        "result_subscriber.go",
    ],
    importpath = "github.com/kujilabo/bamboo/bamboo-lib/result",
    visibility = ["//visibility:public"],
    deps = [
        "//bamboo-lib/proto",
        "@com_github_redis_go_redis_v9//:go-redis",
        "@org_golang_google_protobuf//proto",
    ],
)
