load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "worker",
    srcs = [
        "config.go",
        "init.go",
        "kafka_redis_worker.go",
        "redis_job.go",
        "redis_redis_worker.go",
        "worker.go",
        "worker_factory.go",
    ],
    importpath = "github.com/kujilabo/bamboo/bamboo-lib/worker",
    visibility = ["//visibility:public"],
    deps = [
        "//bamboo-lib/proto",
        "//lib/errors",
        "//lib/log",
        "//lib/worker",
        "@com_github_cenkalti_backoff_v4//:backoff",
        "@com_github_redis_go_redis_v9//:go-redis",
        "@com_github_segmentio_kafka_go//:kafka-go",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel//propagation",
        "@io_opentelemetry_go_otel_trace//:trace",
        "@org_golang_google_protobuf//proto",
    ],
)
