load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "src_lib",
    srcs = ["main.go"],
    importpath = "github.com/kujilabo/bamboo/bamboo-request-controller/src",
    visibility = ["//visibility:private"],
    deps = [
        "//bamboo-lib/request",
        "//bamboo-request-controller/src/config",
        "//bamboo-request-controller/src/sqls",
        "//lib/config",
        "//lib/errors",
        "@com_github_segmentio_kafka_go//:kafka-go",
        "@com_github_sirupsen_logrus//:logrus",
        "@io_gorm_gorm//:gorm",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//propagation",
        "@io_opentelemetry_go_otel_sdk//trace",
        "@org_golang_x_sync//errgroup",
    ],
)

go_binary(
    name = "src",
    embed = [":src_lib"],
    visibility = ["//visibility:public"],
)
