load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "src_lib",
    srcs = ["main.go"],
    importpath = "github.com/kujilabo/bamboo/bamboo-worker-redis-redis/src",
    visibility = ["//visibility:private"],
    deps = [
        "//bamboo-lib/worker",
        "//bamboo-worker-redis-redis/src/config",
        "//bamboo-worker-redis-redis/src/proto",
        "//lib/config",
        "@com_github_sirupsen_logrus//:logrus",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//propagation",
        "@io_opentelemetry_go_otel_sdk//trace",
        "@org_golang_google_protobuf//proto",
        "@org_golang_x_sync//errgroup",
    ],
)

go_binary(
    name = "src",
    embed = [":src_lib"],
    visibility = ["//visibility:public"],
)
