load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = ["config.go"],
    embedsrcs = ["debug.yml"],
    importpath = "github.com/kujilabo/bamboo/bamboo-app1/src/config",
    visibility = ["//visibility:public"],
    deps = [
        "//bamboo-lib/client",
        "//lib/config",
        "//lib/domain",
        "//lib/errors",
        "@in_gopkg_yaml_v2//:yaml_v2",
    ],
)
